# simple_calculator

./: .gitignore  README.md  pyproject.toml
calculator/: __init__.py  calculate.py  cli.py  evaluator.py  parser.py
tests/: test_calculator.py
