[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calculator_idziegrzesprzezbobrow"
version = "0.0.1"
authors = [
  { name="Greg", email="" },
]
description = "A simple calculator package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    {include = "calculator"},
    {exclude = "tests"}
]
exclude = [
    "venv_calc",
    ".gitignore",
    ".pytest_cache"
]
#[project.scripts]
#calculator = "calculator.cli"